# AdversaRiskQA

./: .gitignore  Qwen-Qwen3-Next-80B-A3B-Instruct-finance_basic_golden.json  README.md  _pyproject.toml  answer_generation.py  answer_generation.sh  answer_generation_0_5_a100.sh  answer_generation_a100.sh  answer_generation_h100.sh  answer_generation_h100_2gpu.sh  env.example  evaluation.py  job.sh  main.py  models.txt  pyproject.toml  script.py  script.sh  snellius_run.py  test.ipynb  test.py.ipynb
analysis/: README.md  adversarial_analysis.ipynb  cost_analysis.ipynb  factuality_analysis.ipynb
data/: finance.json  health.json  health_advanced_golden.json  law.json  law_advanced_golden.json  test_answer_factuality.json
data/answers/: Qwen-Qwen3-Next-80B-A3B-Instruct-finance_advanced_golden.json  Qwen-Qwen3-Next-80B-A3B-Instruct-health_advanced_golden.json  Qwen-Qwen3-Next-80B-A3B-Instruct-health_basic_golden.json  Qwen-Qwen3-Next-80B-A3B-Instruct-law_advanced_golden.json  Qwen-Qwen3-Next-80B-A3B-Instruct-law_basic_golden.json  openai-gpt-oss-20b-finance_advanced_golden.json  openai-gpt-oss-20b-finance_basic_golden.json  openai-gpt-oss-20b-health_advanced_golden.json  openai-gpt-oss-20b-health_basic_golden.json  openai-gpt-oss-20b-law_advanced_golden.json  openai-gpt-oss-20b-law_basic_golden.json  test_answer.json
data/prompts/: finance_advanced_golden.json  finance_basic_golden.json  health_basic_golden.json  (+1 more)
eval/: README.md  adversality.py  factuality.py  logger.py  models.py  web_serach_test.py
execute_prompts/: README.md  execute_prompts.py
(+96 files in other folders)
