[project]
name = "adversarisk-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "huggingface-hub>=0.35.3",
    "numpy<2.3.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "vllm>=0.11.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
