[project]
name = "adversarisk-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "numpy<2.3.0",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
]
[tool.dotenv]
# Configuration for python-dotenv
# Environment variables will be loaded from .env file in the project root
location = ".env"
override = false

# Required environment variables for this project
# OPENAI_API_KEY: Required for evaluation.py to use the LLM judge
#   Get your API key from: https://platform.openai.com/api-keys
# HUGGING_FACE_HUB_TOKEN: Optional, required for accessing gated models
#   Get your token from: https://huggingface.co/settings/tokens

